// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: inherit 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: inherit;
}"
`;

exports[`getComponentCss() > should return correct css for size: large 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-lg);
}"
`;

exports[`getComponentCss() > should return correct css for size: medium 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-md);
}"
`;

exports[`getComponentCss() > should return correct css for size: small 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
}"
`;

exports[`getComponentCss() > should return correct css for size: x-large 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-xl);
}"
`;

exports[`getComponentCss() > should return correct css for size: x-small 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-xs);
}"
`;

exports[`getComponentCss() > should return correct css for size: xx-small 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 1px;
  border: 0;
  outline: 0;
  overflow: hidden;
  box-sizing: border-box;
  pointer-events: none;
  width: var(--p-flag-size,var(--p-leading-normal));
  height: var(--p-flag-size,var(--p-leading-normal));
  font-family: var(--p-font-porsche-next);
  font-size: var(--p-typescale-2xs);
}"
`;
